src/objects/Campaign_Inventory_Log__c.object
<CustomObject>
    <description>The Campaign Inventory Log represents the inventory requirements of an individual campaign.  It also reflects how many units of a particular Marketing Inventory Items were used in that campaign, and who they were use by.</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Inventory Logs</relationshipLabel>
        <relationshipName>Campaign_Inventory_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Inventory_Required__c</fullName>
        <description>How many units are required for this campaign of this particular type of Marketing Inventory Item.</description>
        <inlineHelpText>How many units are required for this campaign of this particular type of Marketing Inventory Item.</inlineHelpText>
        <label>Inventory Required</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Used__c</fullName>
        <description>The number of units used for a particular Marketing Inventory Item used for this campaign.</description>
        <inlineHelpText>The number of units used for a particular Marketing Inventory Item used for this campaign.</inlineHelpText>
        <label>Inventory Used</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Inventory_Item__c</fullName>
        <label>Marketing Inventory Item</label>
        <referenceTo>Marketing_Inventory_Item__c</referenceTo>
        <relationshipLabel>Campaign Inventory Logs</relationshipLabel>
        <relationshipName>Campaign_Inventory_Logs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This represents the contact to which the item was given.</description>
        <inlineHelpText>This represents the contact to which the item was given.</inlineHelpText>
        <label>Recipient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaign Inventory Logs</relationshipLabel>
        <relationshipName>Campaign_Inventory_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Campaign Inventory Log</label>
    <nameField>
        <label>Campaign Inventory Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Inventory Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>